fixed margin padding alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,7 @@ button{
   background-color: #E02C6D;
   padding: 10px 20px;
   border-radius: 40px;
+  margin: 0;
 }
 button .fas{
   margin-left: 8px;
@@ -176,12 +177,15 @@ font-family: 'Mochiy Pop P One', sans-serif;
   }
   .banner-section img{
     margin-top: 22px;
+    width: 340px;
   }
   .banner-section .left-banner{
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin: 0 auto;
+    padding: 0 20;
   }
   
   .products-section{
@@ -211,13 +215,20 @@ font-family: 'Mochiy Pop P One', sans-serif;
     display: flex;
     flex-direction: column;
     flex-direction: column-reverse;
-    align-items: center;
+    justify-items: center;
   }
   .banner-section .left-banner{
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    justify-content: center;
+    width: auto;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  .banner-section .right-banner img{
+    width: 257px;
   }
   .products-section {
     display: flex;
